# pyhandouts

./: 404.html  README.md  TODO  TODO.md  conf.py  index.html  index.rst  mkdocs.yml  mkdocs_requirements.txt  myrules.py  readthedocs.yml  setup.cfg  sitemap.xml
OOP/000_intro/: index.html
OOP/001_classes_objects/: index.html
OOP/002_inheritance/: index.html
OOP/003_advanced/: index.html
_static/css/: custom.css
basics/000_first/: index.html
basics/001_install/: index.html
basics/100_basics/: index.html
basics/101_var/: index.html
basics/102_alt/: index.html
basics/103_iter/: index.html
basics/104_ecz/: index.html
basics/104_seq/: index.html
basics/105_funz/: index.html
basics/106_mod/: index.html
basics/106_psl/: index.html
basics/106_pypi/: index.html
basics/107_files/: index.html
basics/108_csv/: index.html
basics/108_dict_json_csv/: index.html
docs/: OOP.md  TODO  about.md  index.md
docs/00_basics/: 101_var.md  102_alt.md  103_iter.md  104_seq.md  106_mod.md  108_csv.md
docs/01_OOP/: 000_intro.md
docs/02_wx/: 160_timer.md  170_full_gui.md  171_advanced.md  (+1 more)
handout/: 00_basics.rst  01_var.rst  02_alt.rst  03_iter.rst  04_seq.rst  05_funz.rst  06_mod.rst  07_files.rst  08_OOP.rst
insights/: 01_pip.rst  02_virtualenv.rst  03_eccezioni.rst  04_arduino.rst  04_turtle.rst  05_script_to_exe.rst  06_scipy.rst  xx_pygame2.TODO  xx_script_to_exe.TODO  xx_sqlite.TODO
intro/: 00_first.rst  01_install.rst
mkdocs2/: base.html  content.html
search/: search_index.json
stylesheets/: extra.css
wx/: 201_classes.txt
(+163 files in other folders)
