[metadata]
license_file = LICENSE

[compile_catalog]
statistics = True
domain = messages

[extract_messages]
copyright_holder = Andrea Diamantini
domain = messages
msgid_bugs_address = "https://github.com/adjamhub/pyhandouts"
project = pyhandouts
no_wrap = True

[init_catalog]
domain = messages

[update_catalog]
ignore_obsolete = True
update_header_comment = True
domain = messages

